5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1593_1805.log
== SUBMITION (2019-03-28 22:51:01) 
-- CODE:
from math import*
xa= float(input("l1"))
ya= float(input("l2"))
xb= float(input("l3"))
yb= float(input("l4"))

dab= sqrt((xb-xa)**2 +(yb-ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.164822
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
3.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:51:47) 
-- CODE:
from math import*
xa= float(input("l1"))
ya= float(input("l2"))
xb= float(input("l3"))
yb= float(input("l4"))

dab = sqrt((xb - xa)**2 +(yb - ya)**2)
print(round(dab,3))
-- EXECUTION TIME:
0.147659
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
3.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:29:52) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)//2
ym= (yb + ya)//2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.0
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:30:26) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)//2
ym= (yb + ya)//2
print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.168379
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.0
3.0
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.0
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:31:16) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)//2
ym= (yb + ya)//2
print(round(xm, 3))
print(round(ym, 3))
-- OUTPUT:
37.0
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:31:58) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)/2
ym= (yb + ya)/2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:32:25) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)/2
ym= (yb + ya)/2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:33:11) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)/2
ym= (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:33:14) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)/2
ym= (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.151438
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.5
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.8
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.8
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:33:21) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)/2
ym= (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:34:18) 
-- CODE:
xa = float(input("xa:"))
xb = float(input("xb:"))
yb = float(input("yb:"))
ya = float(input("ya:"))
xm= (xb + xa)//2
ym= (yb + ya)//2
print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.183754
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.0
3.0
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.0
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:36:24) 
-- CODE:
xa = int(input("xa:"))
xb = int(input("xb:"))
yb = int(input("yb:"))
ya = int(input("ya:"))
xm = (xb+xa)//2
ym = (yb+ya)//2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
37
39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:38:09) 
-- CODE:
xa = int(input("xa:"))
xb = int(input("xb:"))
yb = int(input("yb:"))
ya = int(input("ya:"))
xm = (ya+xa)//2
ym = (yb+xb)//2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
49
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:41:43) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
40.0
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:42:02) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.13221
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.0
2.0
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.0
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:42:12) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.149552
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.0
2.0
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.0
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:42:16) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:44:46) 
-- CODE:
xa =int(input("xa:"))
xb =int(input("xb:"))
yb =int(input("yb:"))
ya =int(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:46:10) 
-- CODE:
xa =float(input("xa:")
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 2))
print(round(ym, 2))
-- ERROR:
File "XXXX", line 2
    xb =float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:46:48) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:47:08) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)//2
ym = (ya+xb)//2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
40.0
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:47:26) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)/2
ym = (ya+xb)/2
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:47:34) 
-- CODE:
xa =float(input("xa:"))
xb =float(input("xb:"))
yb =float(input("yb:"))
ya =float(input("ya:"))
xm = (yb+xa)/2
ym = (ya+xb)/2
print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.228922
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
